--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="label_worker">Worker</string>
     <string name="label_select_from_below">Select from below:</string>
     <string name="action_save">Save</string>
+    <string name="action_show_data">Show Data</string>
+    <string name="value_statistics_count">There are %1$d Doctors reports, %2$d Nurses reports, and %3$d Workers reports</string>
 </resources>
