--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="action_save">Save</string>
     <string name="action_show_data">Show Data</string>
     <string name="value_statistics_count">There are %1$d Doctors reports, %2$d Nurses reports, and %3$d Workers reports</string>
+    <string name="message_saved_success">Saved Success</string>
 </resources>
