--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="nav_item_reports">Reports</string>
     <string name="nav_item_home">Home</string>
     <string name="action_logout">Logout\n</string>
+    <string name="action_print_data">Print Data</string>
 </resources>
